--- a/main.css
+++ b/main.css
@@ -3,4 +3,50 @@ body {
   font-size: 16px;
 }
 
+.header {
+  background: transparent url("assets/img/cat-1.jpg");
+}
 
+.navigation {
+  text-align: right;
+  position: relative;
+}
+
+.navigation .background {
+  background: #111;
+  opacity: 0.25;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
+}
+
+.navigation ul,
+.navigation li {
+  margin: 0;
+  padding: 0;
+}
+.navigation ul {
+  position: relative;
+  margin: 0 -1rem 0 0;
+  z-index: 1;
+}
+
+.navigation li {
+  list-style: none;
+  display: inline-block;
+}
+
+.navigation li a {
+  display: block;
+  font-size: 1.125rem;
+  color: #fff;
+  padding: 2.5rem 1rem;
+  text-decoration: none;
+}
+
+.navigation li.active {
+  border-bottom: #fff solid 2px;
+}
