--- a/main.css
+++ b/main.css
@@ -4,7 +4,9 @@ body {
 }
 
 .header {
-  background: transparent url("assets/img/cat-1.jpg");
+  background: transparent no-repeat 50% 0 url("assets/img/cat-1.jpg");
+  background-size: 100%;
+  height: 900px;
 }
 
 .navigation {
@@ -49,4 +51,28 @@ body {
 
 .navigation li.active {
   border-bottom: #fff solid 2px;
+}
+
+.header .title {
+  text-align: center;
+  color: #fff;
+  margin-top: 10%;
+}
+
+.header .title .btn {
+  border-radius: 30px;
+  width: 200px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0;
+}
+
+.header .title h1 {
+  font-weight: bold;
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.header .sub-title {
+  margin-bottom: 1rem;
 }
