--- a/main.scss
+++ b/main.scss
@@ -1,16 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap');
+
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 .header {
   background: transparent no-repeat 50% 0 url("assets/img/cat-1.jpg");
   background-size: 100%;
-  height: 900px; }
+  height: 900px;
+}
 
 .navigation {
   text-align: right;
-  position: relative; }
+  position: relative;
+}
 
 .navigation .background {
   background: #111;
@@ -20,49 +24,61 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 0; }
+  z-index: 0;
+}
 
 .navigation ul,
 .navigation li {
   margin: 0;
-  padding: 0; }
-
+  padding: 0;
+}
 .navigation ul {
   position: relative;
   margin: 0 -1rem 0 0;
-  z-index: 1; }
+  z-index: 1;
+}
 
 .navigation li {
   list-style: none;
-  display: inline-block; }
+  display: inline-block;
+}
 
 .navigation li a {
   display: block;
   font-size: 1.125rem;
   color: #fff;
   padding: 2.5rem 1rem;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .navigation li.active {
-  border-bottom: #fff solid 2px; }
+  border-bottom: #fff solid 2px;
+}
 
 .header {
-  font-size: 1rem; }
-  .header .title {
+  font-size: 1rem;
+
+  .title {
     text-align: center;
     color: #fff;
-    margin-top: 10%; }
-  .header .title .btn {
+    margin-top: 10%;
+  }
+
+  .title .btn {
     border-radius: 30px;
     width: 200px;
     height: 45px;
     line-height: 45px;
-    padding: 0; }
-  .header .title h1 {
+    padding: 0;
+  }
+
+  .title h1 {
     font-weight: bold;
     font-size: 3rem;
-    margin-bottom: 2rem; }
-  .header .sub-title {
-    margin-bottom: 1rem; }
+    margin-bottom: 2rem;
+  }
 
-/*# sourceMappingURL=main.css.map */
+  .sub-title {
+    margin-bottom: 1rem;
+  }
+}
