--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .header {
-  background: transparent no-repeat 50% 0 url("assets/img/cat-1.jpg");
+  background: transparent no-repeat 50% 0 url("../img/cat-1.jpg");
   background-size: 100%;
   height: 900px;
 }
