--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,84 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap');
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  //font-size: 16px;
 }
 
 .header {
   background: transparent no-repeat 50% 0 url("../img/cat-1.jpg");
   background-size: 100%;
-  height: 900px;
+
+  .title {
+    margin-top: 10%;
+    padding-bottom: 10%;
+
+    h1 {
+      font-weight: 800;
+      font-size: 3rem;
+    }
+  }
+}
+
+.btn {
+  border-radius: 30px;
+  width: 200px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0;
 }
 
 .navigation {
   text-align: right;
   position: relative;
-}
+  padding-right: 20%;
 
-.navigation .background {
-  background: #111;
-  opacity: 0.25;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 0;
-}
-
-.navigation ul,
-.navigation li {
-  margin: 0;
-  padding: 0;
-}
-.navigation ul {
-  position: relative;
-  margin: 0 -1rem 0 0;
-  z-index: 1;
-}
-
-.navigation li {
-  list-style: none;
-  display: inline-block;
-}
-
-.navigation li a {
-  display: block;
-  font-size: 1.125rem;
-  color: #fff;
-  padding: 2.5rem 1rem;
-  text-decoration: none;
-}
-
-.navigation li.active {
-  border-bottom: #fff solid 2px;
-}
-
-.header {
-  font-size: 1rem;
-
-  .title {
-    text-align: center;
-    color: #fff;
-    margin-top: 10%;
+  .background {
+    background: #111;
+    opacity: 0.25;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  ul {
+    position: relative;
+    margin: 0;
   }
 
-  .title .btn {
-    border-radius: 30px;
-    width: 200px;
-    height: 45px;
-    line-height: 45px;
-    padding: 0;
+  li {
+    list-style: none;
+    display: inline-block;
+
+    a {
+      display: block;
+      font-size: 1.125rem;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-decoration: none;
+    }
+  }
+  .active {
+    border-bottom: #fff solid 2px;
   }
 
-  .title h1 {
-    font-weight: bold;
-    font-size: 3rem;
-    margin-bottom: 2rem;
+}
+
+.services {
+  margin-top: 5%;
+  margin-bottom: 5%;
+
+  h2 {
+    font-weight: 700;
   }
 
-  .sub-title {
-    margin-bottom: 1rem;
+  p {
+    color: #999;
+  }
+
+  .item {
+    h5 {
+      font-weight: 600;
+    }
+
+    .description {
+      font-size: 0.9rem;
+      color: #999;
+      line-height: 1.25rem;
+    }
   }
 }
+
+
+
+
