--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,6 +3,27 @@
   --navigation-height: 6rem;
 }
 
+//helper classes
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.color-secondary {
+  color: #999;
+}
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
@@ -16,7 +37,6 @@ body {
     padding: 10% 0;
 
     h1 {
-      font-weight: 800;
       font-size: 3rem;
     }
   }
@@ -64,24 +84,11 @@ body {
   margin-top: 5%;
   margin-bottom: 5%;
 
-  h2 {
-    font-weight: 700;
-  }
-
-  p {
-    color: #999;
-  }
-
   .item {
     display: flex;
 
-    h5 {
-      font-weight: 600;
-    }
-
     .description {
       font-size: 0.9rem;
-      color: #999;
       line-height: 1.25rem;
     }
   }
