--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -139,10 +139,14 @@ h2 {
 }
 
 .bg-purple {
+  position: absolute;
   background: linear-gradient(90deg, #504DC2 20.44%, #5F12D0 80.91%), #C4C4C4;
   height: 30rem;
+  width: 100%;
 }
 .works {
+  position: relative;
+
   .works-items {
     border-bottom: #E0E0E0 solid 2px;
 
@@ -156,6 +160,13 @@ h2 {
   }
 }
 
+.projects {
+  padding: 5% 0;
+
+  img {
+    border-radius: 10px;
+  }
+}
 
 
 
