--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -82,7 +82,6 @@ h2 {
   .navigation {
     display: flex;
     justify-content: flex-end;
-    margin-right: 10rem;
 
     .navigation-link {
       padding: 2rem 1rem;
@@ -131,7 +130,7 @@ h2 {
     }
 
     img {
-      max-width: 100%;
+      width: 100%;
       border-radius: 30px;
       box-shadow: 0 0 10px rgba(111, 111, 111, 0.25);
     }
@@ -167,7 +166,7 @@ h2 {
     }
 
     img {
-      max-width: 100%;
+      width: 100%;
       border-radius: 10px;
     }
   }
@@ -178,25 +177,30 @@ h2 {
 
   img {
     border-radius: 10px;
-    max-width: 100%;
+    width: 100%;
   }
 }
 
 .video {
   background: transparent no-repeat 50% 0 url("../img/cat-11.jpg");
+  background-size: 100%;
 
   .video-frame {
+    background: no-repeat url(/assets/img/cat-5.jpg);
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 10px;
+    width: 960px;
+    height: 420px;
 
     .video-play {
       position: absolute;
       border: white solid 1px;
       border-radius: 50px;
-    }
-
-    img {
-      border-radius: 10px;
-      max-width: 100%;
+      margin: auto;
     }
   }
 }
